Session3/homework/2-dev-enviroment/gateway/course-gateway-controller.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: course-frontend-gateway
  labels:
    project: istio-course
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio
  labels:
    app: frontend
    service: frontend
    project: istio-course
spec:
  hosts:
  - "*"
  gateways:
  - course-frontend-gateway
  http:
  - match:
    - headers:
        developer:
          exact: enrico
      uri:
        prefix: /frontend-catalog/api/v1/
    rewrite:
        uri: /api/v1/
    route:
    - destination:
        host: frontend
        subset: v2
  - match:
      - uri:
          prefix: /frontend-catalog/api/v1/
    rewrite:
      uri: /api/v1/
    route:
      - destination:
          host: frontend
          subset: v1
